--- a/app/partials/drivers.html
+++ b/app/partials/drivers.html
@@ -1,7 +1,4 @@
 
-
-
-
 <div class="top-nav ng-scope">
     <div class="container-fluid">
         <div class="row-fluid search-button-bar-container">
@@ -24,28 +21,39 @@
 <div class="container-fluid main-content ng-scope">
 <div class="row-fluid">
 <div class="span12">
-<h2 class="main-titling">Drivers Championship</h2>
+<h2 class="main-titling">Bundesliga</h2>
 <div class="row-fluid">
 <div class="span12">
 <table class="table table-striped table-bordered box list-table">
   <thead>
     <!--tr> <th colspan="4">Driver's Championship Standings</th> </tr-->
 <tr>
-    <th>Standings</th>
-    <th>Driver</th>
+    <th>#</th>
     <th>Team</th>
-    <th>Points</th>
+    <th>Pl</th>
+    <th>W</th>
+    <th>D</th>
+<th>L</th>
+<th>GD</th>
+<th>Pts</th> 
+
 </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="driver in driversList | filter: nameFilter">
-      <td>{{$index + 1}}</td>
+    <tr ng-repeat="teams in teamsList | filter: nameFilter">
+      <!--td>{{$index + 1}}</td-->
+        <td>{{teams.position}}</td>
       <td>
-        <img src="img/flags/{{driver.Driver.nationality}}.png" alt="Nation Flag" />
-        <a href="#/drivers/{{driver.Driver.driverId}}">{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}</a>
+        <img ng-src="{{teams.crestURI}}" style="width: 30px; height: 30px" alt="Team Crest" />
+        <a href="#/drivers/{{driver.Driver.driverId}}">{{teams.teamName}}</a>
       </td>
-      <td>{{driver.Constructors[0].name}}</td>
-      <td>{{driver.points}}</td>
+      <!--td>{{teams.squadMarketValue}}</td-->
+<td>{{teams.playedGames}}</td>
+      <td>{{teams.wins}}</td>
+<td>{{teams.draws}}</td>
+<td>{{teams.losses}}</td>
+<td>{{teams.goals}} : {{teams.goalsAgainst}}</td>
+<td>{{teams.points}}</td>
     </tr>
   </tbody>
 <tfoot>
@@ -54,5 +62,6 @@
 </tr>
 </tfoot>
 </table>
+
 
 
