--- a/app/partials/drivers.html
+++ b/app/partials/drivers.html
@@ -40,7 +40,7 @@
 </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="teams in teamsList | filter: nameFilter">
+    <tr ng-repeat="teams in germanTeamsList | filter: nameFilter">
       <!--td>{{$index + 1}}</td-->
         <td>{{teams.position}}</td>
       <td>
