--- a/app/partials/leagues.html
+++ b/app/partials/leagues.html
@@ -1,4 +1,3 @@
-
 <div class="top-nav ng-scope">
     <div class="container-fluid">
         <div class="row-fluid search-button-bar-container">
@@ -28,32 +27,18 @@
   <thead>
     <!--tr> <th colspan="4">Driver's Championship Standings</th> </tr-->
 <tr>
-    <th>#</th>
-    <th>Team</th>
-    <th>Pl</th>
-    <th>W</th>
-    <th>D</th>
-<th>L</th>
-<th>GD</th>
-<th>Pts</th> 
+    <th>League</th>
+
 
 </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="teams in teamsList | filter: nameFilter">
-      <!--td>{{$index + 1}}</td-->
-        <td>{{teams.position}}</td>
+    <tr ng-repeat="leagues in leagueList | filter: nameFilter">
+      <td>{{$index + 1}}</td>
       <td>
         <img ng-src="{{teams.crestURI}}" style="width: 30px; height: 30px" alt="Team Crest" />
-        <a href="#/drivers/{{driver.Driver.driverId}}">{{teams.teamName}}</a>
+        <a href="#/drivers/{{driver.Driver.driverId}}">{{leagues.caption}}</a>
       </td>
-      <!--td>{{teams.squadMarketValue}}</td-->
-<td>{{teams.playedGames}}</td>
-      <td>{{teams.wins}}</td>
-<td>{{teams.draws}}</td>
-<td>{{teams.losses}}</td>
-<td>{{teams.goals}} : {{teams.goalsAgainst}}</td>
-<td>{{teams.points}}</td>
     </tr>
   </tbody>
 <tfoot>
